--- a/index.html
+++ b/index.html
@@ -21,6 +21,20 @@
                 </ul>
             </div>
         </nav>
+        <section  id="banner">
+                <div class="banner-div">
+                    <h2>Hi, I  am</h2>
+                    <h1>Mary Hardy</h1>
+                    <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <div>
+                    <button class="button">download cv</button>
+                    <button class="button">contact</button>
+                    </div>
+                </div>
+                <div class="banner-img">
+                    <img src="images/hardy.png" alt="">
+                </div>
+            </section>
     </header>
 </body>
 </html>
